[FEAT/SCRUM-35] 투표하기 API 엔드포인트 연결 (Controller & DTO) (#89)
* feat : 투표하기 Request/Response DTO 작성

[SCRUM-35]

* feat : 투표하기 스웨거 명세 및 엔드포인트 연결

[SCRUM-35]

* feat : 투표하기 API 응답, 예외 처리 테스트 코드 작성

[SCRUM-35]

* feat : 코드 포맷팅 수정

[SCRUM-35]