@@ -3,6 +3,7 @@ package com.tracek.global.exception;
 import com.tracek.global.response.ApiResponse;
 import com.tracek.global.response.GeneralErrorCode;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.mapping.PropertyReferenceException;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -24,11 +25,19 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ApiResponse<String>> handleValidationException(
             MethodArgumentNotValidException e) {
-        String errorMessage = e.getBindingResult().getAllErrors().get(0).getDefaultMessage();
+        String errorMessage = e.getBindingResult().getAllErrors().getFirst().getDefaultMessage();
         log.error("[ValidationException] {}", errorMessage);
 
         return ResponseEntity.status(GeneralErrorCode.INVALID_INPUT_VALUE.getStatus())
                 .body(ApiResponse.onFailure(GeneralErrorCode.INVALID_INPUT_VALUE, errorMessage));
+    }
+
+    @ExceptionHandler(DataIntegrityViolationException.class)
+    public ResponseEntity<ApiResponse<Void>> handleDataIntegrityViolationException(
+            DataIntegrityViolationException e) {
+        log.warn("데이터 무결성/동시성 충돌 발생: {}", e.getMessage());
+        return ResponseEntity.status(GeneralErrorCode.CONFLICT.getStatus())
+                .body(ApiResponse.onFailure(GeneralErrorCode.CONFLICT));
     }
 
     @ExceptionHandler(PropertyReferenceException.class)
